--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li class="elements__card">
                     <img src="./images/kirill-pershin-1088404-unsplash.jpg" class="elements__card-picture" alt="Старая заброшенная церковь на фоне лесистого склона">
                     <div class="elements__card-description"> 
-                        <p class="elements__card-text">Здесь</p>
+                        <h2 class="elements__card-text">Здесь</h2>
                         <button class="elements__card-like" type="button"></button>
                     </div>
                 </li>
@@ -36,7 +36,7 @@
                 <li class="elements__card">
                     <img src="./images/kirill-pershin-1404681-unsplash.jpg" class="elements__card-picture" alt="Закат на фоне плато">
                     <div class="elements__card-description"> 
-                        <p class="elements__card-text">Могла</p>
+                        <h2 class="elements__card-text">Могла</h2>
                         <button class="elements__card-like" type="button"></button>
                     </div>
                 </li>
@@ -44,7 +44,7 @@
                 <li class="elements__card">
                     <img src="./images/kirill-pershin-1556355-unsplash.jpg" class="elements__card-picture" alt="Гористая местность с лесами и заснеженной горой на заднем фоне">
                     <div class="elements__card-description"> 
-                        <p class="elements__card-text">Быть</p>
+                        <h2 class="elements__card-text">Быть</h2>
                         <button class="elements__card-like" type="button"></button>
                     </div>
                 </li>
@@ -52,7 +52,7 @@
                 <li class="elements__card">
                     <img src="./images/kirill-pershin-1088404-unsplash.jpg" class="elements__card-picture" alt="Старая заброшенная церковь на фоне лесистого склона">
                     <div class="elements__card-description"> 
-                        <p class="elements__card-text">Ваша</p>
+                        <h2 class="elements__card-text">Ваша</h2>
                         <button class="elements__card-like" type="button"></button>
                     </div>
                 </li>
@@ -60,7 +60,7 @@
                 <li class="elements__card">
                     <img src="./images/kirill-pershin-1404681-unsplash.jpg" class="elements__card-picture" alt="Закат на фоне плато">
                     <div class="elements__card-description"> 
-                        <p class="elements__card-text">Реклама</p>
+                        <h2 class="elements__card-text">Реклама</h2>
                         <button class="elements__card-like" type="button"></button>
                     </div>
                 </li>
@@ -68,7 +68,7 @@
                 <li class="elements__card">
                     <img src="./images/kirill-pershin-1556355-unsplash.jpg" class="elements__card-picture" alt="Гористая местность с лесами и заснеженной горой на заднем фоне">
                     <div class="elements__card-description"> 
-                        <p class="elements__card-text">8800553535 Проще позвонить, чем у кого-то занимать</p>
+                        <h2 class="elements__card-text">8800553535 Проще позвонить, чем у кого-то занимать</h2>
                         <button class="elements__card-like" type="button"></button>
                     </div>
                 </li>
@@ -86,8 +86,8 @@
                 <form class="popup__form" name="profile_form" id="profile_form" novalidate="">
                     <h2 class="popup__form-title">Редактировать профиль</h2>
                     <fieldset class="form">
-                        <label class="form__input-label"><input class="form__input form__input-name" placeholder="Ваше Имя" value="Жак-Ив Кусто" id="fullName" name="name" minlength="2" maxlength="40" required=""></label> 
-                        <label class="form__input-label"><input class="form__input form__input-job" placeholder="Место работы" value="Исследователь океана" id="jobName" name="job" minlength="2" maxlength="200" required=""></label>
+                        <label class="form__input-label"><input class="form__input form__input-name" placeholder="Ваше Имя" id="fullName" name="name"></label> 
+                        <label class="form__input-label"><input class="form__input form__input-job" placeholder="Место работы" id="jobName" name="job"></label>
                     </fieldset>
                     <button class="popup__save-button" type="submit">Сохранить</button></form>
                     </div>
