--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                 <form class="popup__form" name="profile_form" id="profile_form" novalidate="">
                     <h2 class="popup__form-title">Редактировать профиль</h2>
                     <fieldset class="form">
-                        <input class="form__input form__input-name" placeholder="Ваше Имя" id="fullName" name="name"></label> 
-                        <input class="form__input form__input-job" placeholder="Место работы" id="jobName" name="job"></label>
+                        <input class="form__input form__input-name" placeholder="Ваше Имя" id="fullName" name="name">
+                        <input class="form__input form__input-job" placeholder="Место работы" id="jobName" name="job">
                     </fieldset>
                     <button class="popup__save-button" type="submit">Сохранить</button></form>
                     </div>
